force-app/main/default/objects/HealthCheckRisk__c/HealthCheckRisk__c.object-meta.xml
<CustomObject>
    <label>Health Check Risk</label>
    <nameField>
        <displayFormat>HCRISK-{00000}</displayFormat>
        <label>HCRisk</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Check Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>