force-app/main/default/objects/HealthCheckRisk__c/fields/OrgSetting__c.field-meta.xml
<CustomField>
    <fullName>OrgSetting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Setting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>