force-app/main/default/objects/HealthCheckRisk__c/fields/OrgValue__c.field-meta.xml
<CustomField>
    <fullName>OrgValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>