force-app/main/default/objects/HealthCheckRisk__c/fields/RecordProductionDate__c.field-meta.xml
<CustomField>
    <fullName>RecordProductionDate__c</fullName>
    <description>Used for Security Centre Custom Metrics</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for Security Centre Custom Metrics</inlineHelpText>
    <label>Record Production Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>