force-app/main/default/objects/HealthCheckRisk__c/fields/RiskType__c.field-meta.xml
<CustomField>
    <fullName>RiskType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>